--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
       margin: 0;
       transform-origin: 0 0;
     }
-
   </style>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const scaleFactor = 1.1;
-      let currentScale = 1;
+      window.currentScale = 1;
+      let imageContainerWidth = document.getElementById('imageContainer').offsetWidth;
+
+      window.onresize = () => {
+        const newImageContainerWidth = document.getElementById('imageContainer').offsetWidth;
+        window.currentScale = window.currentScale * (newImageContainerWidth / imageContainerWidth);
+        imageContainerWidth = newImageContainerWidth;
+        imageContainer.style.transformOrigin = "0px 0px";
+        imageContainer.style.transform = `scale(${window.currentScale})`;
+      }
+
       const container = document.getElementById('imageContainer');
       container.addEventListener('wheel', function (event) {
         console.log(event)
@@ -24,15 +33,15 @@
 
           // Get wheel scroll direction and calculate new scale
           const delta = (event.deltaY < 0) ? scaleFactor : 1 / scaleFactor;
-          currentScale = currentScale * delta;
+          window.currentScale = window.currentScale * delta;
 
           // Update transform origin to mouse position
-          const mouseX = event.clientX / currentScale * (1 - delta);
-          const mouseY = event.clientY / currentScale * (1 - delta);
+          const mouseX = event.clientX / window.currentScale * (1 - delta);
+          const mouseY = event.clientY / window.currentScale * (1 - delta);
           container.style.transformOrigin = `${mouseX}px ${mouseY}px`;
 
           // Apply new scale
-          container.style.transform = `scale(${currentScale})`;
+          container.style.transform = `scale(${window.currentScale})`;
         }
       });
     });
@@ -62,6 +71,11 @@
         console.log('recv meta: ')
         console.log(meta_data)
         cnt = meta_data.page_num
+
+        window.currentScale = imageContainer.offsetWidth / meta_data.width
+        imageContainer.style.transformOrigin = "0px 0px"
+        imageContainer.style.transform = `scale(${window.currentScale})`
+
         while (canvas_handle.length > cnt) {
           const removed = canvas_handle.pop()
           imageContainer.removeChild(removed)
