--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       // Ctrl+scroll rescaling
       container.addEventListener('wheel', function (event) {
         const scaleFactor = 1.1;  // 1.1x per scroll
-        console.log(event)
+        console.log(event);
         if (event.ctrlKey) {
           event.preventDefault();
 
@@ -56,11 +56,11 @@
     // 0: should receive json
     let cnt = 0;
     let meta_data = null;
-    let canvas_handle = []
+    let canvas_handle = [];
 
-    const socket = new WebSocket('ws://127.0.0.1:23625')
+    const socket = new WebSocket('ws://127.0.0.1:23625');
     socket.binaryType = "arraybuffer";
-    const imageContainer = document.getElementById('imageContainer')
+    const imageContainer = document.getElementById('imageContainer');
     socket.addEventListener('open', () => {
       console.log('WebSocket connection opened');
     })
@@ -69,19 +69,19 @@
     socket.addEventListener('message', (event) => {
       // 解析收到的JSON数组
       if (cnt == 0) {
-        meta_data = JSON.parse(event.data)
-        console.log('recv meta: ')
-        console.log(meta_data)
-        cnt = meta_data.page_num
+        meta_data = JSON.parse(event.data);
+        console.log('recv meta: ');
+        console.log(meta_data);
+        cnt = meta_data.page_num;
 
         // compute scaling factor according to the paper size
-        window.currentScale = imageContainer.offsetWidth / meta_data.width
-        imageContainer.style.transformOrigin = "0px 0px"
-        imageContainer.style.transform = `scale(${window.currentScale})`
+        window.currentScale = imageContainer.offsetWidth / meta_data.width;
+        imageContainer.style.transformOrigin = "0px 0px";
+        imageContainer.style.transform = `scale(${window.currentScale})`;
 
         while (canvas_handle.length > cnt) {
-          const removed = canvas_handle.pop()
-          imageContainer.removeChild(removed)
+          const removed = canvas_handle.pop();
+          imageContainer.removeChild(removed);
         }
         while (canvas_handle.length < cnt) {
           const canvas = document.createElement('canvas');
@@ -90,15 +90,15 @@
           canvas.style.boxShadow = '0px 4px 12px rgba(89, 85, 101, .2)';
           canvas.style.padding = '16px 0';
           imageContainer.appendChild(canvas);
-          canvas_handle.push(canvas)
+          canvas_handle.push(canvas);
         }
-        return
+        return;
       } else {
         const canvas = canvas_handle[meta_data.page_num - cnt]
         const ctx = canvas.getContext('2d');
         const imageData = new ImageData(new Uint8ClampedArray(event.data), meta_data.width, meta_data.height);
         ctx.putImageData(imageData, 0, 0);
-        cnt--
+        cnt--;
       }
     });
 
