--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
           // Get wheel scroll direction and calculate new scale
           const delta = (event.deltaY < 0) ? scaleFactor : 1 / scaleFactor;
+          if (window.currentScale * delta >= 5 || window.currentScale * delta <= 0.2) {
+            // clamp
+            return;
+          }
           window.currentScale = window.currentScale * delta;
 
           // Update transform origin to mouse position
