--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebSocket Multiple Image Display</title>
   <style>
-    .imageContainer {
+    #imageContainer {
       margin: 0;
       transform-origin: 0 0;
     }
@@ -14,6 +14,7 @@
     canvas:not(:last-child) {
       padding-bottom: 32px;
     }
+
   </style>
   <script>
     window.onload = function () {
