--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
   </style>
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    window.onload = function () {
       const container = document.getElementById('imageContainer');
       window.currentScale = 1;  // a global variable for storing scaling factor
       let imageContainerWidth = container.offsetWidth;
@@ -114,7 +114,7 @@
       socket.addEventListener('error', (error) => {
         console.error('WebSocket Error: ', error);
       });
-    });
+    };
   </script>
 </head>
 
