--- a/index.html
+++ b/index.html
@@ -13,41 +13,40 @@
   </style>
   <script>
     window.onload = function () {
-      const container = document.getElementById('imageContainer');
-      window.currentScale = 1;  // a global variable for storing scaling factor
-      let imageContainerWidth = container.offsetWidth;
+      const imageContainer = document.getElementById('imageContainer');
+      let currentScale = 1;  // variable for storing scaling factor
+      let imageContainerWidth = imageContainer.offsetWidth;
 
       // drag (panal resizing) -> rescaling
       window.onresize = () => {
-        const newImageContainerWidth = container.offsetWidth;
-        window.currentScale = window.currentScale * (newImageContainerWidth / imageContainerWidth);
+        const newImageContainerWidth = imageContainer.offsetWidth;
+        currentScale = currentScale * (newImageContainerWidth / imageContainerWidth);
         imageContainerWidth = newImageContainerWidth;
-        container.style.transformOrigin = "0px 0px";
-        container.style.transform = `scale(${window.currentScale})`;
+        imageContainer.style.transformOrigin = "0px 0px";
+        imageContainer.style.transform = `scale(${currentScale})`;
       }
 
       // Ctrl+scroll rescaling
-      container.addEventListener('wheel', function (event) {
+      imageContainer.addEventListener('wheel', function (event) {
         const scaleFactor = 1.1;  // 1.1x per scroll
-        console.log(event);
         if (event.ctrlKey) {
           event.preventDefault();
 
           // Get wheel scroll direction and calculate new scale
           const delta = (event.deltaY < 0) ? scaleFactor : 1 / scaleFactor;
-          if (window.currentScale * delta >= 5 || window.currentScale * delta <= 0.2) {
+          if (currentScale * delta >= 5 || currentScale * delta <= 0.2) {
             // clamp
             return;
           }
-          window.currentScale = window.currentScale * delta;
+          currentScale = currentScale * delta;
 
           // Update transform origin to mouse position
-          const mouseX = event.clientX / window.currentScale * (1 - delta);
-          const mouseY = event.clientY / window.currentScale * (1 - delta);
-          container.style.transformOrigin = `${mouseX}px ${mouseY}px`;
+          const mouseX = event.clientX / currentScale * (1 - delta);
+          const mouseY = event.clientY / currentScale * (1 - delta);
+          imageContainer.style.transformOrigin = `${mouseX}px ${mouseY}px`;
 
           // Apply new scale
-          container.style.transform = `scale(${window.currentScale})`;
+          imageContainer.style.transform = `scale(${currentScale})`;
         }
       });
 
@@ -59,7 +58,6 @@
 
       const socket = new WebSocket('ws://127.0.0.1:23625');
       socket.binaryType = "arraybuffer";
-      const imageContainer = document.getElementById('imageContainer');
       socket.addEventListener('open', () => {
         console.log('WebSocket connection opened');
       });
@@ -76,9 +74,10 @@
           // only run once at start to respect user scaling
           if (isFirstScale) {
             // compute scaling factor according to the paper size
-            window.currentScale = imageContainer.offsetWidth / meta_data.width;
+            imageContainerWidth = imageContainer.offsetWidth;
+            currentScale = imageContainerWidth / meta_data.width;
             imageContainer.style.transformOrigin = "0px 0px";
-            imageContainer.style.transform = `scale(${window.currentScale})`;
+            imageContainer.style.transform = `scale(${currentScale})`;
             isFirstScale = false;
           }
 
@@ -95,7 +94,6 @@
             imageContainer.appendChild(canvas);
             canvas_handle.push(canvas);
           }
-          return;
         } else {
           const canvas = canvas_handle[meta_data.page_num - cnt]
           const ctx = canvas.getContext('2d');
