--- a/addons/vscode/index.html
+++ b/addons/vscode/index.html
@@ -77,7 +77,7 @@
       });
 
       // 0: should receive json
-      let cnt = 0;
+      let inflightPages = 0;
       let meta_data = null;
       let canvas_handle = [];
       let isFirstScale = true;
@@ -91,12 +91,11 @@
       // 当收到WebSocket数据时
       socket.addEventListener('message', (event) => {
         // 解析收到的JSON数组
-        if (cnt == 0) {
+        if (inflightPages == 0) {
           meta_data = JSON.parse(event.data);
-          console.log('recv meta: ');
           console.log(meta_data);
-          cnt = meta_data.page_num;
-
+          inflightPages = meta_data.page_numbers.length;
+          const total_pages = meta_data.page_total
           // only run once at start to respect user scaling
           if (isFirstScale) {
             // compute scaling factor according to the paper size
@@ -107,11 +106,11 @@
             isFirstScale = false;
           }
 
-          while (canvas_handle.length > cnt) {
+          while (canvas_handle.length > total_pages) {
             const removed = canvas_handle.pop();
             imageContainer.removeChild(removed);
           }
-          while (canvas_handle.length < cnt) {
+          while (canvas_handle.length < total_pages) {
             const canvas = document.createElement('canvas');
             canvas.width = meta_data.width;
             canvas.height = meta_data.height;
@@ -119,11 +118,13 @@
             canvas_handle.push(canvas);
           }
         } else {
-          const canvas = canvas_handle[meta_data.page_num - cnt]
+          const id = meta_data.page_numbers[meta_data.page_numbers.length - inflightPages];
+          console.log(`page ${id} received`)
+          const canvas = canvas_handle[id]
           const ctx = canvas.getContext('2d');
           const imageData = new ImageData(new Uint8ClampedArray(event.data), meta_data.width, meta_data.height);
           ctx.putImageData(imageData, 0, 0);
-          cnt--;
+          inflightPages--;
         }
       });
 
@@ -136,6 +137,56 @@
       socket.addEventListener('error', (error) => {
         console.error('WebSocket Error: ', error);
       });
+      let visibleCanvasRange = []
+      const updateVisibleCanvasRange = () => {
+        function isInViewport(element) {
+          const rect = element.getBoundingClientRect();
+          return (
+            rect.top >= 0 &&
+            rect.left >= 0 &&
+            rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+            rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+          );
+        }
+        const visibleCanvas = [];
+        for (let i = 0; i < canvas_handle.length; i++) {
+          const canvas = canvas_handle[i];
+          const rect = canvas.getBoundingClientRect();
+          if (rect.top < window.innerHeight && rect.bottom > 0) {
+            visibleCanvas.push(i);
+          }
+        }
+        const newVisibleCanvasRange = {
+          page_start: visibleCanvas[0],
+          page_end: visibleCanvas[visibleCanvas.length - 1] + 1,
+        };
+        if (newVisibleCanvasRange.page_end === visibleCanvasRange.page_end && newVisibleCanvasRange.page_start === visibleCanvasRange.page_start) {
+          return;
+        }
+        visibleCanvasRange = newVisibleCanvasRange;
+        console.log(`visibleCanvasRange Changed: ${JSON.stringify(visibleCanvasRange)}`);
+        socket.send(JSON.stringify(visibleCanvasRange));
+      };
+
+      const debounce = (func, wait, immediate) => {
+        let timeout;
+        return function executedFunction() {
+          const context = this;
+          const args = arguments;
+          const later = function () {
+            timeout = null;
+            if (!immediate) func.apply(context, args);
+          };
+          const callNow = immediate && !timeout;
+          clearTimeout(timeout);
+          timeout = setTimeout(later, wait);
+          if (callNow) func.apply(context, args);
+        };
+      };
+
+      const debouncedUpdateVisibleCanvasRange = debounce(updateVisibleCanvasRange, 100);
+      window.addEventListener('scroll', debouncedUpdateVisibleCanvasRange);
+      window.addEventListener('resize', debouncedUpdateVisibleCanvasRange);
     };
   </script>
 </head>
