--- a/addons/vscode/index.html
+++ b/addons/vscode/index.html
@@ -204,32 +204,22 @@
         function patchRoot(prev, next) {
           const availableOwnedResource = new Map();
 
-          let styleCount = 0;
-          for (let i = 0; i < prev.children.length; i++) {
+          for (let i = 0; i < 3; i++) {
             const prevChild = prev.children[i];
             const nextChild = next.children[i];
+            console.log("prev", prevChild);
+            console.log("next", nextChild);
             if (prevChild.tagName === "defs") {
-              console.log("prev defs", prevChild);
-              console.log("next defs", nextChild);
-              for (let j = 0; j < nextChild.children.length; j++) {
-                const nextChildChild = nextChild.children[j];
-                if (nextChildChild.tagName === 'g') {
-                  const prevGlyphs = prevChild.querySelector('#glyph');
-                  console.log("append glyphs:", nextChildChild.children, "to", prevGlyphs);
-                  prevGlyphs.append(...nextChildChild.children);
-                } else {
-                  console.warn("clip path not handled", nextChildChild)
-                }
+              if (prevChild.getAttribute("id") === "glyph") {
+                console.log("append glyphs:", nextChild.children, "to", prevChild);
+                prevChild.append(...nextChild.children);
+              } else if (prevChild.getAttribute("id") === "clip-path") {
+                console.log("clip path: replace");
+                prevChild.replaceChildren(...nextChild.children);
               }
-            } else if (prevChild.tagName === "style") {
-              styleCount++;
-              if (styleCount === 2) {
-                // skip base style
-                console.log("replace extra style");
-                console.log("prev style", prevChild);
-                console.log("next style", nextChild);
-                prevChild.replaceWith(nextChild);
-              }
+            } else if (prevChild.tagName === "style" && nextChild.getAttribute("data-reuse") !== "1") {
+              console.log("replace extra style");
+              prevChild.replaceChildren(...nextChild.children);
             }
           }
 
