Bundle inputs together

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -9,5 +9,6 @@
   <body style="padding: 0px 0px 0px 0px">
     <div id="imageContainer" style="height: 0px"></div>
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/svg.ts"></script>
   </body>
 </html>
