fix #63: make scale work when the cursor is not within the document

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -9,6 +9,6 @@
   </head>
 
   <body style="padding: 0px 0px 0px 0px">
-    <div id="imageContainer" style="height: 0px"></div>
+    <div id="imageContainer"></div>
   </body>
 </html>
