--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/src/svg.ts"></script>
   </head>
 
-  <body style="padding: 0px 0px 0px 0px">
+  <body style="padding: 0; margin: 0;">
     <div id="imageContainer"></div>
   </body>
 </html>
