dev(frontend): regard error of calculation.

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -8,7 +8,24 @@
     <script type="module" src="/src/svg.ts"></script>
   </head>
 
-  <body style="padding: 0; margin: 0;">
-    <div id="imageContainer"></div>
+  <body
+    style="
+      padding: 0;
+      margin: 0;
+      background-color: var(
+        --vscode-editor-background,
+        rgba(0, 0, 0, 0.5)
+      ) !important;
+    "
+  >
+    <div
+      id="imageContainer"
+      style="
+        background-color: var(
+          --vscode-editor-background,
+          rgba(0, 0, 0, 0.5)
+        ) !important;
+      "
+    ></div>
   </body>
 </html>
