dev(frontend): update default background color

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -14,7 +14,7 @@
       margin: 0;
       background-color: var(
         --vscode-editor-background,
-        rgba(0, 0, 0, 0.5)
+        rgb(82, 86, 89)
       ) !important;
     "
   >
@@ -23,7 +23,7 @@
       style="
         background-color: var(
           --vscode-editor-background,
-          rgba(0, 0, 0, 0.5)
+          rgb(82, 86, 89)
         ) !important;
       "
     ></div>
