dev(frontend): disable too smart dark reader

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- https://github.com/darkreader/darkreader/blob/main/CONTRIBUTING.md#disabling-dark-reader-on-your-site -->
+    <meta name="darkreader-lock" />
+
     <title>Typst Preview</title>
     <style id="preview-theme-styles"></style>
     <!-- before all of code to avoid rerender by style replacement -->
