dev: try to avoid calculation error that casues: + shaking border width + shaking border height + shaking horizontal scrollbar

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -94,12 +94,14 @@
       background-color: var(--typst-preview-background-color) !important;
     "
   >
+    <!-- reserving 1px to hide height border, margin-top: -1px; -->
     <div
       id="typst-app"
       style="
         width: fit-content;
         height: fit-content;
         margin: 0 auto;
+        margin-top: -1px;
         background-color: var(--typst-preview-background-color) !important;
       "
     ></div>
