--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -115,11 +115,12 @@
       padding: 0;
       margin: 0;
       height: fit-content;
+      width: 100%;
       background-color: var(--typst-preview-background-color) !important;
     "
   >
     <!-- reserving 1px to hide height border, margin-top: -1px; -->
-    <div id="typst-container">
+    <div id="typst-container" style="width: 100%">
       <div id="typst-container-top" style="width: 100%; z-index: 1">
         <div id="typst-top-toolbar" style="width: 100%">
           <div
