dev: update help messages

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -203,10 +203,10 @@
                 <div class="key-binding-box">h</div>
               </div>
               <div class="key-binding-row">
-                <div class="key-binding-box">g</div>
+                <div class="key-binding-box">o</div>
               </div>
               <div class="key-binding-row">
-                <div class="key-binding-box">o</div>
+                <div class="key-binding-box">g</div>
               </div>
               <div class="key-binding-row">
                 <div class="key-binding-box">right</div>
@@ -227,25 +227,25 @@
             </div>
             <div class="flex-col" style="flex: 70; gap: 5px">
               <div class="key-binding-desc">
-                Show the help panel (key bindings).
-              </div>
-              <div class="key-binding-desc">
-                Show goto panel.
+                Toggle the help panel (key bindings).
               </div>
               <div class="key-binding-desc">
                 Toggle content preview. <span style="color: orange;">(Coming soon)</span>
               </div>
               <div class="key-binding-desc">
-                next animation or slide.
+                Goto the page by number.
               </div>
               <div class="key-binding-desc">
-                previous animation or slide.
+                Switch to next animation or slide.
               </div>
               <div class="key-binding-desc">
-                next slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">right</span>)</span>
+                Switch to previous animation or slide.
               </div>
               <div class="key-binding-desc">
-                previous slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">left</span>)</span>
+                Switch to next slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">right</span>)</span>
+              </div>
+              <div class="key-binding-desc">
+                Switch to previous slide. <span style="color: orange;">(currently just same as <span class="key-binding-box" style="margin: 0 2px">left</span>)</span>
               </div>
             </div>
           </div>
