dev: create typst-dom to maintain

--- a/addons/frontend/index.html
+++ b/addons/frontend/index.html
@@ -115,6 +115,15 @@
     </script>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/typst.ts"></script>
+    <!-- <style>
+      .hidden {
+        display: none;
+      }
+
+      #typst-container.mode-doc #typst-top-toolbar {
+        display: none;
+      }
+    </style> -->
   </head>
 
   <body
